feat[Lab]: shime process

--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
 </head>
 
 <body>
-    <div class='start-screen'>
+    <!-- <div class='start-screen'>
         <div class='message'>
             <svg width="450" height="150" xmlns="http://www.w3.org/2000/svg">
                 <g>
@@ -120,13 +120,12 @@
                  <path transform="rotate(8.95416 309.621 118.757)" stroke="null" id="svg_22" d="m-49.63922,151.56374c9.39207,-1.57725 713.79725,-65.45607 712.45554,-65.61379c1.34171,0.15772 12.0755,23.81654 1.34171,24.99948" opacity="NaN" fill="#ffffff"/>
                 </g>
                </svg>
-            <!-- <img class="big-border"src="start-img.webp"> -->
             <button class="start-but" style="display: none;">P&nbsp;L&nbsp;A&nbsp;Y</button>
             <div class="loader"></div>
             <div style="min-height: 40px;"></div>
             <div class="controls-mess">&#8592; &#8593; &#8594; &#8595; | W A S D</div>
         </div>
-    </div>
+    </div> -->
     <div id="container-game" touch-action="none"></div>
     <div id='cont-level-dev'></div> 
 </body>
