--- a/src/stylesheets/controls.css
+++ b/src/stylesheets/controls.css
@@ -143,7 +143,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #231143;
+    background-color: #0e0924;
     color: #ffffff;
     display: flex;
     flex-direction: column;
