feat[UI]: change

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
         }
         body {
             overflow: hidden;
-            font-family: Geneva, Arial, Helvetica, sans-seri;
-            font-family: 'Roboto Mono' monospace;
+            font-style: italic;
             color: #a1ccea;
         }
         .start-screen {
+            font-family: Geneva, Arial, Helvetica, sans-seri;
             position: absolute;
             left: 0;
             right: 0;
@@ -50,6 +50,7 @@
             font-size: 15vw;
             line-height: 90px;
             color: #6490ad;
+            font-style: normal;
         }
         .message img {
             width: 250px;
