--- a/src/stylesheets/controls.css
+++ b/src/stylesheets/controls.css
@@ -147,7 +147,7 @@
     left: 0;
     right: 0;
     background-color: #0e0924;
-    color: #ffffff;
+    color: #8aa7a8;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -161,12 +161,9 @@
     left: 0;
     right: 0;
     background-color: #11194386;
-    color: #ffffff;
+    color: #dcecfc;
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    align-items: center;
-    font-style: italic;
 }
 .final-page div {
     padding-left: 30px;
@@ -202,4 +199,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+}
+.colW {
+    color: #ffffff;
 }
